产业发展---园区数据导入

--- a/Lingang.City.Brain/View/Industry/Garden/Left_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Left_Second_01.html
@@ -1,10 +1,10 @@
-﻿<!-- 企业综合评分雷达图 -->
+﻿<!-- 招商漏斗 -->
 <div id="left02_01"  class="divbox divbox-lr cy-qy-lr1 clearfix" style="z-index:999;display:block;">
     <h3><div>招商漏斗</div></h3>
     <div class="divcont flex cy-qy-lr1-cont">
-        <div class="cy-qy-lr1-contdiv">
-            <div class="">接洽数<span class="testAerial">3158</span></div>
-            <div class="">成功数<span class="testAerial">2764</span></div>
+        <div class="cy-qy-lr1-contdiv" id="zsfunnel">
+            <!--<div class="">接洽数<span class="testAerial">3158</span></div>
+            <div class="">成功数<span class="testAerial">2764</span></div>-->
         </div>
     </div>
 </div>
