--- a/Lingang.City.Brain/View/Industry/Garden/Right_First_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_First_01.html
@@ -5,23 +5,23 @@
         <div class="cy-zhwy flex">
             <div class="cy-zhwy-div flex">
                 <button class="cy-zhwy-a">报修</button>
-                <ul class="cy-zhwy-ul">
-                    <li class=""><span>总数：</span><em class="testAerial">20</em></li>
+                <ul class="cy-zhwy-ul" id="zhwy-repair">
+                    <!--<li class=""><span>总数：</span><em class="testAerial">20</em></li>
                     <li class=""><span>已处理：</span><em class="testAerial">15</em></li>
-                    <li class=""><span>待处理：</span><em class="testAerial">5</em></li>
+                    <li class=""><span>待处理：</span><em class="testAerial">5</em></li>-->
                 </ul>
             </div>
             <div class="cy-zhwy-div flex">
                 <button class="cy-zhwy-a">巡检</button>
-                <ul class="cy-zhwy-ul" id="xj">
-                    <li class=""><span>总数：</span><em class="testAerial">20</em></li>
+                <ul class="cy-zhwy-ul" id="zhwy-inspect">
+                    <!--<li class=""><span>总数：</span><em class="testAerial">20</em></li>
                     <li class=""><span>已处理：</span><em class="testAerial">17</em></li>
-                    <li class=""><span>待处理：</span><em class="testAerial">3</em></li>
+                    <li class=""><span>待处理：</span><em class="testAerial">3</em></li>-->
                 </ul>
             </div>
-            <div class="cy-zhwy-div">
+            <div class="cy-zhwy-div" id="zhwy-weekaveragerate">
                 <div>周平均完成率</div>
-                <span class="testAerial">92%</span>
+                <!--<span class="testAerial">92%</span>-->
             </div>
         </div>
         <div class="chartdiv zhwy-chartdiv" style="height: 4rem; margin-top: .2rem;">
