--- a/Lingang.City.Brain/View/Industry/Garden/Right_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_Second_01.html
@@ -8,220 +8,26 @@
             <button type="button">待处理：<span class="testAerial" id="Untreated">1</span></button>
             <button type="button">处理中：<span class="testAerial" id="in-process">1</span></button>
         </div>
-        <div class="cy-ly-rr1-divbox">
-            <ul class="cy-ly-rr1-ul scrolldiv" style="height:100%;" id="ul-parkingEnvent">
-                <li class="cy-ly-rr1-li active">
+        <div class="cy-ly-rr1-divbox scrolldiv" id="yq-sjtj">
+            <ul class="cy-ly-rr1-ul" style="height:100%;" id="ul-parkingEnvent">
+                <!--<li class="cy-ly-rr1-li active">
                     <div class="cy-ly-rr1-lidiv clearfix active">
                         <span class="cy-ly-rr1-num">001</span>
                         <span class="cy-ly-rr1-name">[一卡通] 申请开卡</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
                     </div>
                     <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">002</span>
-                        <span class="cy-ly-rr1-name">[企业开办]上海凯来仪器有限公司</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state coloryellow">待处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[入驻审批] 上海钠威船舶工程有限公司</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state colorred">未处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[入驻审批]禹奕智能科技（上海）有限公司</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[装修申请]装修办公区域</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[物业报修]自用部分-天花板</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">装修申请]天花板装修</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[一卡通] 申请开卡</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[企业开办]上海宜澳海洋科技有限公司</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[入驻审批] 上海亚曼光电科技有限公司</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[装修申请]装修办公区域</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[物业报修]公共区域-强电-指示牌灯灭</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[物业报修]租赁区域-给排水-滴水</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[物业报修]公共区域-强电-泛光照明坏</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[物业报修]公共区域-强电-强电</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[物业报修]租赁区域-综合维修-综合维修</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[物业报修]公共区域-综合维修-综合维修</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[物业报修]公共区域-强电-强电</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[物业报修]公共区域-给排水-给排水</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[物业报修]公共区域-给排水-坐便器堵</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[物业报修]公共区域-强电-广告灯箱不亮</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[物业报修]公共区域-强电-强电</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[物业报修]公共区域-综合维修-综合维修</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[物业报修]公共区域-电梯-电梯故障",</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">[物业报修]公共区域-强电-灯不亮</span>
-                        <span class="cy-ly-rr1-date">2019/02/01</span>
-                    </div>
-                    <div class="cy-ly-rr1-state">已处理</div>
-                </li>
-
+                    <span class="cy-ly-rr1-date">2019/02/01</span>
+                </li>-->
             </ul>
-
-            <div class="pagination-box">
-                <div class="pagination" id="pagination-parkingEnvent">
-                    <span class="current prev">上一页</span>
-                    <span class="current">1</span>
-                    <a style="cursor: pointer;">2</a>
-                    <a style="cursor: pointer;">...</a>
-                    <a style="cursor: pointer;">4</a>
-                    <a class="next" style="cursor: pointer;">下一页</a>
-                </div>
+        </div>
+        <div class="pagination-box">
+            <div id="pagination-parkingEnvent">
+                <span class="current prev">上一页</span>
+                <span class="current">1</span>
+                <a style="cursor: pointer;">2</a>
+                <a style="cursor: pointer;">...</a>
+                <a style="cursor: pointer;">4</a>
+                <a class="next" style="cursor: pointer;">下一页</a>
             </div>
         </div>
     </div>
