--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -2345,9 +2345,7 @@ dd.pjc-statistic-star >form{
 	height: .88rem;
     width: .5rem;
 }
-.cy-ly-rr1-divbox{
-	height: 15.5rem;
-}
+.cy-ly-rr1-divbox{ height: 15.5rem;}
 .cy-ly-rr1-li{
 	padding: .1rem .2rem;
 	margin-top: .05rem;
@@ -2386,7 +2384,11 @@ dd.pjc-statistic-star >form{
 	font-size: .25rem;
 	
 }
-
+#yq-sjtj{ height: 14.6rem;}
+#yq-sjtj .cy-ly-rr1-state { 
+    width: auto;
+    margin-left:.5rem;
+}
 .cy-ly-rr1-li.active,
 .cy-ly-rr1-li:hover{
 	background-color: rgba(0,126,179,.3);
@@ -2396,6 +2398,9 @@ dd.pjc-statistic-star >form{
 	font-size: .38rem;
 	color: #01fdf5;
 }
+#pagination-parkingEnvent { margin-top:.2rem;}
+#pagination-parkingEnvent .pagination{ font-size: 100% !important;}
+
 
 /*cy-zhwy-div*/
 .cy-zhwy{
@@ -3384,12 +3389,22 @@ dd.pjc-statistic-star >form{
 	color:#edaf07;
 }
 .loudong-div{
+    position:relative;
 	width: 100%;
 	padding: .2rem .45rem;
 	border-radius: .1rem;
 	background: rgba(0, 38, 147, 0.3);
 	box-shadow: inset 0px 0px 0.2rem rgba(20,154,239,0.75);
 	box-sizing: border-box;
+}
+.loudong-div > .box-close {
+    top:0;
+    right:0;
+    width:.6rem;
+    height:.6rem;
+    background-size:.3rem;
+	box-shadow: inset 0px 0px 0.2rem rgba(20,154,239,0.75);
+    transform:translateX(100%);
 }
 .loudong-li{
 	overflow: hidden;
