--- a/Lingang.City.Brain/View/Industry/Building/BuildingDetail.html
+++ b/Lingang.City.Brain/View/Industry/Building/BuildingDetail.html
@@ -3,6 +3,7 @@
 <div class="loudong" id="center01_01">
     <div class="loudong-top"><span class="testAerial" id="buildingName_detail">15</span>号<span class="testAerial">A</span>栋</div>
     <div class="loudong-div">
+        <button class="box-close"></button>
         <ul class="loudong-ul">
             <li class="loudong-li"><div>面积：</div><span><em class="testAerial" id="buildingArea_detail">1200</em>㎡</span></li>
             <li class="loudong-li">
