--- a/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
@@ -7,39 +7,24 @@
             <div class="cy-zhnh-div">
                 <div class="cy-zhnh-div-title">园区单位面积能耗排行</div>
                 <div class="cy-zhnh-div-listbox">
-                    <ul class="">
-                        <li>1&nbsp;B1栋<span>28150</span></li>
+                    <ul id="zhnh-unit">
+                        <!--<li>1&nbsp;B1栋<span>28150</span></li>
                         <li>2&nbsp;B2栋<span>28050</span></li>
-                        <li>3&nbsp;B3栋<span>27350</span></li>
+                        <li>3&nbsp;B3栋<span>27350</span></li>-->
                     </ul>
                 </div>
             </div>
             <div class="cy-zhnh-div">
-                <div class="cy-zhnh-div-right">
+                <div class="cy-zhnh-div-right"  id="zhnh-common">
                     <div class="cy-zhnh-div-title">园区能耗同比分析</div>
                     <span class="testAerial colorgreen">-3.62%<em></em></span>
                 </div>
-                <div class="cy-zhnh-div-right">
+                <div class="cy-zhnh-div-right" id="zhnh-chainratio">
                     <div class="cy-zhnh-div-title">园区能耗环比分析</div>
                     <span class="testAerial colorgreen">-3.62%<em></em></span>
                 </div>
             </div>
         </div>
-
-        <!--<div class="cy-zhwy flex">
-            <button>
-                <div>园区单位面积能耗排行</div>
-                <span class="testAerial" style="color: #0ff;">3</span>
-            </button>
-            <button>
-                <div>园区能耗同比分析</div>
-                <span class="testAerial colorgreen">-3.62%<em></em></span>
-            </button>
-            <button>
-                <div>园区能耗环比分析</div>
-                <span class="testAerial colorgreen">-3.62%<em></em></span>
-            </button>
-        </div>-->
         <div class="chartdiv zhnh-chartdiv" style="height: 4.3rem; margin-top: .2rem;">
             <div class="zhnh-chart" id="zhnh-chart"></div>
             <button class="chartzoomin" onclick="require('g_Home').loadBigChart('Right_First_02')"></button>
@@ -47,17 +32,17 @@
 
         <div class="cy-piebox flex">
             <div class="cy-piediv">
-                <div class="cy-piedata"><span>5,896</span>千瓦</div>
+                <div class="cy-piedata" id="zhnh-dailyenergy"><span>5,896</span>千瓦</div>
                 <div class="cy-pie"></div>
                 <div class="cy-pietext">园区当日总能耗</div>
             </div>
             <div class="cy-piediv">
-                <div class="cy-piedata"><span>28</span>万千瓦</div>
+                <div class="cy-piedata" id="zhnh-monthenergy"><span>28</span>万千瓦</div>
                 <div class="cy-pie"></div>
                 <div class="cy-pietext">园区当月总能耗</div>
             </div>
             <div class="cy-piediv">
-                <div class="cy-piedata"><span>262</span>万千瓦</div>
+                <div class="cy-piedata" id="zhnh-yearenergy"><span>262</span>万千瓦</div>
                 <div class="cy-pie"></div>
                 <div class="cy-pietext">园区当年总能耗</div>
             </div>
