社区综合---数据导入

--- a/Lingang.City.Brain/View/SocietyNew/Center_01_Info.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_01_Info.html
@@ -1,18 +1,16 @@
-﻿
-
-
-
-<div class="statistic-box twocol" style="z-index:999;display:block;">
+﻿<div class="statistic-box twocol" style="z-index:999;display:block;">
     <button class="statistic-slidebtn"><img src="Content/images/statistic-arrow.png"></button>
     <div class="statistic-slidediv">
         <div class="pjc-statistic" style="z-index:999;display:block;">
             <dl>
-                <dt>现场巡查员数量</dt>
-                <dd class="testAerial"><span id="s_xcxcysl">28</span></dd>
-                <dt>巡查无人机数量</dt>
-                <dd class="testAerial"><span id="s_xcwrjsl">4</span></dd>
-                <dt>接入摄像头数量</dt>
-                <dd class="testAerial"><span id="s_jrsxtsl">163</span></dd>
+                <dt>实时总人数</dt>
+                <dd class="testAerial"><span id="s_bignum1">0</span></dd>
+                <dt>停车</dt>
+                <dd class="testAerial"><span id="s_bignum2">0</span></dd>
+                <dt>入住率</dt>
+                <dd class="testAerial"><span id="s_bignum3">0</span><span>&#37;</span></dd>
+                <dt>便利性指标</dt>
+                <dd class="testAerial"><span id="s_bignum4">0</span><span>&#37;</span></dd>
             </dl>
         </div>
     </div>
