--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT1.html
@@ -2,7 +2,7 @@
 <div id="left02_01" class="divbox divbox-lr" style="z-index:999;display:block;">
     <h3><div>社区人口</div></h3>
     <div class="divcont">
-        <ul class="sqrk-ul flex">
+        <ul class="sqrk-ul flex" id="society-person">
             <li class="sqrk-li">
                 <div class="item-l"><img src="Content/images/sqrk_icon1.png"></div>
                 <div class="item-r"><div class="item-r-name">实时总人数</div><div class="item-r-data testAerial">2,773</div></div>
