--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite1.html
@@ -5,11 +5,11 @@
         <div class="sqzz-wrjgd-lr1-div">
             <div class="sqzz-wrjgd-1 fl">
                 <div class="">开工时间</div>
-                <span class="testAerial">2019-03-24</span>
+                <span class="testAerial" id="worksite_startTime">2019-03-24</span>
             </div>
             <div class="sqzz-wrjgd-2 fr">
-                <div class=""><span>施工方</span><em>上海创新科技有限公司</em></div>
-                <div class=""><span>建设用途</span><em>新一代信息技术</em></div>
+                <div class=""><span>施工方</span><em id="worksite_builder">上海创新科技有限公司</em></div>
+                <div class=""><span>建设用途</span><em id="worksite_usefor">新一代信息技术</em></div>
             </div>
         </div>
     </div>
