--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -2310,7 +2310,12 @@ dd.pjc-statistic-star >form{
 	box-shadow: inset 0 0 .25rem rgba(20,154,239,.75);
 	box-sizing: border-box;
 }
+.sqzz-hax-lr3-li:nth-child(1),
+.sqzz-hax-lr3-li:nth-child(2),
+.sqzz-hax-lr3-li:nth-child(3){ margin-top: 0; }
+
 .sqzz-hax-lr3-li:nth-child(3n){ margin-right: 0; }
+
 .sqzz-hax-lr3-li>table{ 
 	width: 100%; 
 	height: 100%;
