--- a/Lingang.City.Brain/View/Industry/Garden/Left_Second_02.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Left_Second_02.html
@@ -3,8 +3,8 @@
     <h3><div>停车服务</div></h3>
     <div class="divcont">
         <div class="cy-tcfw-div flex">
-            <button class="cy-tcfw-button"><div>停车位</div><span class="testAerial">268</span></button>
-            <button class="cy-tcfw-button"><div>空余车位</div><span class="testAerial">68</span></button>
+            <button class="cy-tcfw-button"><div>停车位</div><span class="testAerial" id="cyyq-tcfw-total">268</span></button>
+            <button class="cy-tcfw-button"><div>空余车位</div><span class="testAerial" id="cyyq-tcfw-empty">68</span></button>
         </div>
         <div class="chartdiv tcfw-chartdiv" style="height: 4rem;">
             <div class="tcfw-chart" id="tcfw-chart"></div>
