--- a/Lingang.City.Brain/View/Industry/Garden/Left_Second_03.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Left_Second_03.html
@@ -3,9 +3,9 @@
     <h3><div>无人驾驶接驳车</div></h3>
     <div class="divcont">
         <div class="cy-tcfw-div flex">
-            <button class="cy-tcfw-button"><div>总数</div><span class="testAerial">20</span></button>
-            <button class="cy-tcfw-button"><div>正常</div><span class="testAerial">20</span></button>
-            <button class="cy-tcfw-button"><div>故障</div><span class="testAerial">0</span></button>
+            <button class="cy-tcfw-button"><div>总数</div><span class="testAerial" id="cyyq-wrjs-total">15</span></button>
+            <button class="cy-tcfw-button"><div>正常</div><span class="testAerial" id="cyyq-wrjs-normal">15</span></button>
+            <button class="cy-tcfw-button"><div>故障</div><span class="testAerial" id="cyyq-wrjs-fail">0</span></button>
         </div>
         <div class="chartdiv wrjsjbc-chartdiv" style="height: 4rem;">
             <div class="wrjsjbc-chart" id="wrjsjbc-chart"></div>
