--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite3.html
@@ -2,7 +2,7 @@
 <div id="left02_03" class="divbox divbox-lr sqzz-wrj-lr2" style="top: 10.8rem;">
     <h3><div>天气预报</div></h3>
     <div class="divcont sqzz-wrj-lr2">
-        <div class="sqzz-wrj-lr2-cont">
+        <div class="sqzz-wrj-lr2-cont" id="worksite-weather">
             <div class="sqzz-wrj-lr2-temp">周六（今天，实时：14℃）</div>
             <div class="tablebox">
                 <table cellspacing="0" cellpadding="0" class="table sqzz-wrj-lr2-table">
