--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -2024,7 +2024,9 @@ dd.pjc-statistic-star >form{
 }
 
 /*qytop10-tab*/
+
 .qytop10-tab>a:after{
+    top:.1rem;
 	border-radius: .01rem;
 	width: .2rem;
 	height: .2rem;
@@ -2040,7 +2042,7 @@ dd.pjc-statistic-star >form{
 	line-height: .72rem;
 }
 .qytop10-table>tbody>tr>td:nth-child(1){
-	width: 15%;
+	width: 13%;
 	color: #34e1f5;
 }
 .qytop10-table>tbody>tr>td:nth-child(2)>div{
@@ -2055,7 +2057,7 @@ dd.pjc-statistic-star >form{
 .qytop10-barbox{
 	width: 100%;
 	height: 100%;
-	padding-right: 1.5rem;
+	padding-right: 2rem;
 	box-sizing: border-box;
 }
 .qytop10-barbox>div{
@@ -2064,6 +2066,7 @@ dd.pjc-statistic-star >form{
 	height: .1rem;
 	border-radius: .05rem;
 	background-color: currentColor;
+    transition:.5s all ease;
 }
 .qytop10-bar1{ 
 	margin-bottom: .1rem;
@@ -2073,7 +2076,7 @@ dd.pjc-statistic-star >form{
 .qytop10-barbox>div>span{
 	position: absolute;
 	top: 50%;
-	left: 3rem;
+	left: 2.5rem;
 	font-size: .2rem;
 	word-break: keep-all;
 	border-radius: inherit;
