--- a/Lingang.City.Brain/View/Industry/Garden/Left_First_02.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Left_First_02.html
@@ -2,7 +2,7 @@
 <div id="left01_02" class="divbox divbox-ll clearfix" style="top: 12.5rem;z-index:999;display:block;">
     <h3 class="hastabbox">
         <div>企业top10列表</div>
-        <div class="charttabbox flex qytop10-tab">
+        <div class="charttabbox flex qytop10-tab"  style="line-height:.4rem;">
             <a class="charttab">对外投资(万)</a>
             <a class="charttab">注册资本(万)</a>
         </div>
@@ -16,8 +16,8 @@
                         <td><div>上海金雕投资有限公司</div></td>
                         <td>
                             <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" style="width: 100%;"><span>949</span></div>
-                                <div class="qytop10-bar2" style="width: 95%;"><span>10000</span></div>
+                                <div class="qytop10-bar1"><span>0</span></div>
+                                <div class="qytop10-bar2"><span>0</span></div>
                             </div>
                         </td>
                     </tr>
@@ -26,8 +26,8 @@
                         <td><div>上海钜澎资产管理有限公司</div></td>
                         <td>
                             <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" style="width: 95%;"><span>85</span></div>
-                                <div class="qytop10-bar2" style="width: 85%;"><span>1000</span></div>
+                                <div class="qytop10-bar1"><span>0</span></div>
+                                <div class="qytop10-bar2"><span>0</span></div>
                             </div>
                         </td>
                     </tr>
@@ -36,8 +36,8 @@
                         <td><div>上海力言投资有限公司</div></td>
                         <td>
                             <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" style="width: 85%;"><span>64</span></div>
-                                <div class="qytop10-bar2" style="width: 75%;"><span>100</span></div>
+                                <div class="qytop10-bar1"><span>0</span></div>
+                                <div class="qytop10-bar2"><span>0</span></div>
                             </div>
                         </td>
                     </tr>
@@ -46,8 +46,8 @@
                         <td><div>永柏(上海)投资控股有限公司</div></td>
                         <td>
                             <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" style="width: 75%;"><span>61</span></div>
-                                <div class="qytop10-bar2" style="width: 65%;"><span>10000</span></div>
+                                <div class="qytop10-bar1"><span>0</span></div>
+                                <div class="qytop10-bar2"><span>0</span></div>
                             </div>
                         </td>
                     </tr>
@@ -56,8 +56,8 @@
                         <td><div>上海小村资产管理有限公司</div></td>
                         <td>
                             <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" style="width: 65%;"><span>49</span></div>
-                                <div class="qytop10-bar2" style="width: 60%;"><span>15500</span></div>
+                                <div class="qytop10-bar1"><span>0</span></div>
+                                <div class="qytop10-bar2"><span>0</span></div>
                             </div>
                         </td>
                     </tr>
@@ -66,8 +66,8 @@
                         <td><div>一村资本有限公司</div></td>
                         <td>
                             <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" style="width: 60%;"><span>44</span></div>
-                                <div class="qytop10-bar2" style="width: 55%;"><span>200000</span></div>
+                                <div class="qytop10-bar1"><span>0</span></div>
+                                <div class="qytop10-bar2"><span>0</span></div>
                             </div>
                         </td>
                     </tr>
@@ -76,8 +76,8 @@
                         <td><div>上海领毅投资中心(有限合伙)</div></td>
                         <td>
                             <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" style="width: 55%;"><span>39</span></div>
-                                <div class="qytop10-bar2" style="width: 50%;"><span>400382</span></div>
+                                <div class="qytop10-bar1"><span>0</span></div>
+                                <div class="qytop10-bar2"><span>0</span></div>
                             </div>
                         </td>
                     </tr>
@@ -86,8 +86,8 @@
                         <td><div>上海悦达江申金融信息服务有限公司</div></td>
                         <td>
                             <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" style="width: 50%;"><span>30</span></div>
-                                <div class="qytop10-bar2" style="width: 45%;"><span>10000</span></div>
+                                <div class="qytop10-bar1"><span>0</span></div>
+                                <div class="qytop10-bar2"><span>0</span></div>
                             </div>
                         </td>
                     </tr>
@@ -96,8 +96,8 @@
                         <td><div>上海莘凝投资中心(有限合伙)</div></td>
                         <td>
                             <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" style="width: 45%;"><span>30</span></div>
-                                <div class="qytop10-bar2" style="width: 40%;"><span>3781</span></div>
+                                <div class="qytop10-bar1"><span>0</span></div>
+                                <div class="qytop10-bar2"><span>0</span></div>
                             </div>
                         </td>
                     </tr>
@@ -106,8 +106,8 @@
                         <td><div>上海吉贸郁川资产管理有限公司</div></td>
                         <td>
                             <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" style="width: 40%;"><span>27</span></div>
-                                <div class="qytop10-bar2" style="width: 30%;"><span>5000</span></div>
+                                <div class="qytop10-bar1"><span>0</span></div>
+                                <div class="qytop10-bar2"><span>0</span></div>
                             </div>
                         </td>
                     </tr>
@@ -116,122 +116,3 @@
         </div>
     </div>
 </div>
-
-
-<!--<div id="left01_02" class="divbox divbox-ll clearfix" style="top: 12.5rem;z-index:999;display:block;">
-    <h3 class="hastabbox">
-        <div>企业top10列表</div>
-        <div class="charttabbox flex qytop10-tab">
-            <a class="charttab">对外投资</a>
-            <a class="charttab">注册资本</a>
-        </div>
-    </h3>
-    <div class="divcont qytop10-cont" style="padding-top: .2rem;">
-        <div class="qytop10-tablebox">
-            <table cellpadding="0" cellspacing="0" class="table qytop10-table" id="topten-table">
-                <tbody>
-                    <tr onclick="require('gl_TopCompany').loadTopCompanyPOI();">
-                        <td>TOP1</td>
-                        <td><div>上海金雕投资有限公司</div></td>
-                        <td>
-                            <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" data-text="949亿" style="width: 100%;"></div>
-                                <div class="qytop10-bar2" data-text="10000万" style="width: 95%;"></div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr onclick="require('gl_TopCompany').loadTopCompanyPOI();">
-                        <td>TOP2</td>
-                        <td><div>上海钜澎资产管理有限公司</div></td>
-                        <td>
-                            <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" data-text="85亿" style="width: 95%;"></div>
-                                <div class="qytop10-bar2" data-text="1000万" style="width: 85%;"></div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr onclick="require('gl_TopCompany').loadTopCompanyPOI();">
-                        <td>TOP3</td>
-                        <td><div>上海力言投资有限公司</div></td>
-                        <td>
-                            <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" data-text="64亿" style="width: 85%;"></div>
-                                <div class="qytop10-bar2" data-text="100万" style="width: 75%;"></div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr onclick="require('gl_TopCompany').loadTopCompanyPOI();">
-                        <td>TOP4</td>
-                        <td><div>永柏(上海)投资控股有限公司</div></td>
-                        <td>
-                            <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" data-text="61亿" style="width: 75%;"></div>
-                                <div class="qytop10-bar2" data-text="10000万" style="width: 65%;"></div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr onclick="require('gl_TopCompany').loadTopCompanyPOI();">
-                        <td>TOP5</td>
-                        <td><div>上海小村资产管理有限公司</div></td>
-                        <td>
-                            <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" data-text="49亿" style="width: 65%;"></div>
-                                <div class="qytop10-bar2" data-text="15500万" style="width: 60%;"></div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr onclick="require('gl_TopCompany').loadTopCompanyPOI();">
-                        <td>TOP6</td>
-                        <td><div>一村资本有限公司</div></td>
-                        <td>
-                            <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" data-text="44亿" style="width: 60%;"></div>
-                                <div class="qytop10-bar2" data-text="200000万" style="width: 55%;"></div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr onclick="require('gl_TopCompany').loadTopCompanyPOI();">
-                        <td>TOP7</td>
-                        <td><div>上海领毅投资中心(有限合伙)</div></td>
-                        <td>
-                            <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" data-text="39亿" style="width: 55%;"></div>
-                                <div class="qytop10-bar2" data-text="400382万" style="width: 50%;"></div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr onclick="require('gl_TopCompany').loadTopCompanyPOI();">
-                        <td>TOP8</td>
-                        <td><div>上海悦达江申金融信息服务有限公司</div></td>
-                        <td>
-                            <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" data-text="30亿" style="width: 50%;"></div>
-                                <div class="qytop10-bar2" data-text="10000万" style="width: 45%;"></div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr onclick="require('gl_TopCompany').loadTopCompanyPOI();">
-                        <td>TOP9</td>
-                        <td><div>上海莘凝投资中心(有限合伙)</div></td>
-                        <td>
-                            <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" data-text="30亿" style="width: 45%;"></div>
-                                <div class="qytop10-bar2" data-text="3781万" style="width: 40%;"></div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr onclick="require('gl_TopCompany').loadTopCompanyPOI();">
-                        <td>TOP10</td>
-                        <td><div>上海吉贸郁川资产管理有限公司</div></td>
-                        <td>
-                            <div class="qytop10-barbox">
-                                <div class="qytop10-bar1" data-text="27亿" style="width: 40%;"></div>
-                                <div class="qytop10-bar2" data-text="5000万" style="width: 30%;"></div>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>-->
