社综数据导入

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard1.html
@@ -7,20 +7,20 @@
         </div>
     </h3>
     <div class="divcont sqzz-hax-lr1">
-        <div class="sqzz-hax-lr1-text">近一次的海岸线巡飞长度 <span class="testAerial">12,860m</span></div>
+        <div class="sqzz-hax-lr1-text">近一次的海岸线巡飞长度(km) <span class="testAerial" id="recent-flight">12,860</span></div>
         <div class="sqzz-hax-lr1-div flex">
             <div class="sqzz-hax-lr1-pic"></div>
             <div class="wrj-left">
                 <ul class="wrj-ul">
                     <li class="wrj-li"></li>
-                    <li class="wrj-li"></li>
-                    <li class="wrj-li"></li>
+                    <!--<li class="wrj-li"></li>
+                    <li class="wrj-li"></li>-->
                 </ul>
                 <button type="button" class="arrowbtn btnleft"></button>
                 <button type="button" class="arrowbtn btnright"></button>
             </div>
         </div>
-        <ul class="sqzz-hax-lr1-ul flex">
+        <ul class="sqzz-hax-lr1-ul flex" id="recent-flight-mess">
             <li class="sqzz-hax-lr1-li"><button><div>无人机数（架）</div><span class="testAerial">6</span></button></li>
             <li class="sqzz-hax-lr1-li"><button><div>游客劝离率</div><span class="testAerial">89%</span></button></li>
             <li class="sqzz-hax-lr1-li"><button><div>垃圾发现数</div><span class="testAerial">10</span></button></li>
