--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard2.html
@@ -9,14 +9,14 @@
     </h3>
     <div class="divcont sqzz-hax-lr2">
         <div class="sqzz-hax-lr2-div flex">
-            <ul class="sqzz-hax-lr2-ul">
-                <li><span>近一个月的飞行长度</span><em class="testAerial">12,860m</em></li>
+            <ul class="sqzz-hax-lr2-ul" id="recent-monthflight">
+                <li><span>近一个月的飞行长度(km)</span><em class="testAerial">12,860</em></li>
                 <li><span>近一个月的飞行次数</span><em class="testAerial">12,860</em></li>
-                <li><span>近一次的海岸线巡飞长度</span><em class="testAerial">12,860</em></li>
+                <li><span>近一次的海岸线巡飞长度(km)</span><em class="testAerial">12,860</em></li>
             </ul>
             <div class="sqzz-hax-lr2-pic"></div>
         </div>
-        <ul class="sqzz-hax-lr1-ul flex">
+        <ul class="sqzz-hax-lr1-ul flex" id="recent-monthflight-mess">
             <li class="sqzz-hax-lr1-li"><button><div>无人机数（架）</div><span class="testAerial">6</span></button></li>
             <li class="sqzz-hax-lr1-li"><button><div>游客劝离率</div><span class="testAerial">89%</span></button></li>
             <li class="sqzz-hax-lr1-li"><button><div>垃圾发现数</div><span class="testAerial">10</span></button></li>
