--- a/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
@@ -13,14 +13,14 @@
             <div class="sjcg-chart" id="sjcg-chart"></div>
             <button class="chartzoomin" onclick="require('s_Home').loadBigChart('Right_Second_02')"></button>
         </div>
-        <div class="flex sjxx-tab">
-            <button type="button" class="active">已处理：<span class="testAerial">21</span></button>
-            <button type="button">待处理：<span class="testAerial">5</span></button>
-            <button type="button">未处理：<span class="testAerial">5</span></button>
+        <div class="flex sjxx-tab"  id="sjcg-status">
+            <button type="button" class="active">已结案: <span class="testAerial">21</span></button>
+            <button type="button">待受理: <span class="testAerial">5</span></button>
+            <button type="button">待督查: <span class="testAerial">5</span></button>
         </div>
         <div class="scrolldiv" id="right_EventList">
             <ul class="scrollitem" id="ul_eventlist">
-                <li class="sjxx-li sjxx-li-new active">
+                <!--<li class="sjxx-li sjxx-li-new active">
                     <div class="sjxx-li-line1">
                         <span class="sjxx-id">001</span>
                         <span class="sjxx-event">无线门磁出现故障</span>
@@ -30,139 +30,7 @@
                         上海市浦东新区临港大道×××号
                         <span class="fr sjxx-time">2019/02/06<span>张宇</span></span>
                     </div>
-                </li>
-                <li class="sjxx-li sjxx-li-new  active">
-                    <div class="sjxx-li-line1">
-                        <span class="sjxx-id">002</span>
-                        <span class="sjxx-event">无线门磁出现故障</span>
-                        <span class="fr sjxx-state colorred">待处理</span>
-                    </div>
-                    <div class="sjxx-address">
-                        上海市浦东新区临港大道×××号
-                        <span class="fr sjxx-time">2019/02/06<span>张宇</span></span>
-                    </div>
-                </li>
-                <li class="sjxx-li">
-                    <div class="sjxx-li-line1">
-                        <span class="sjxx-id">003</span>
-                        <span class="sjxx-event">无线门磁出现故障</span>
-                        <span class="fr sjxx-state">已处理</span>
-                    </div>
-                    <div class="sjxx-address">
-                        上海市浦东新区临港大道×××号
-                        <span class="fr sjxx-time">2019/02/06<span>李立群</span></span>
-                    </div>
-                </li>
-                <li class="sjxx-li">
-                    <div class="sjxx-li-line1">
-                        <span class="sjxx-id">004</span>
-                        <span class="sjxx-event">无线门磁出现故障</span>
-                        <span class="fr sjxx-state colororangin">处理中</span>
-                    </div>
-                    <div class="sjxx-address">
-                        上海市浦东新区临港大道×××号
-                        <span class="fr sjxx-time">2019/02/06<span>张宇</span></span>
-                    </div>
-                </li>
-                <li class="sjxx-li">
-                    <div class="sjxx-li-line1">
-                        <span class="sjxx-id">004</span>
-                        <span class="sjxx-event">无线门磁出现故障</span>
-                        <span class="fr sjxx-state colororangin">处理中</span>
-                    </div>
-                    <div class="sjxx-address">
-                        上海市浦东新区临港大道×××号
-                        <span class="fr sjxx-time">2019/02/06<span>张宇</span></span>
-                    </div>
-                </li>
-                <li class="sjxx-li">
-                    <div class="sjxx-li-line1">
-                        <span class="sjxx-id">004</span>
-                        <span class="sjxx-event">无线门磁出现故障</span>
-                        <span class="fr sjxx-state colororangin">处理中</span>
-                    </div>
-                    <div class="sjxx-address">
-                        上海市浦东新区临港大道×××号
-                        <span class="fr sjxx-time">2019/02/06<span>张宇</span></span>
-                    </div>
-                </li>
-                <li class="sjxx-li">
-                    <div class="sjxx-li-line1">
-                        <span class="sjxx-id">004</span>
-                        <span class="sjxx-event">无线门磁出现故障</span>
-                        <span class="fr sjxx-state colororangin">处理中</span>
-                    </div>
-                    <div class="sjxx-address">
-                        上海市浦东新区临港大道×××号
-                        <span class="fr sjxx-time">2019/02/06<span>张宇</span></span>
-                    </div>
-                </li>
-                <li class="sjxx-li">
-                    <div class="sjxx-li-line1">
-                        <span class="sjxx-id">004</span>
-                        <span class="sjxx-event">无线门磁出现故障</span>
-                        <span class="fr sjxx-state colororangin">处理中</span>
-                    </div>
-                    <div class="sjxx-address">
-                        上海市浦东新区临港大道×××号
-                        <span class="fr sjxx-time">2019/02/06<span>张宇</span></span>
-                    </div>
-                </li>
-                <li class="sjxx-li">
-                    <div class="sjxx-li-line1">
-                        <span class="sjxx-id">004</span>
-                        <span class="sjxx-event">无线门磁出现故障</span>
-                        <span class="fr sjxx-state colororangin">处理中</span>
-                    </div>
-                    <div class="sjxx-address">
-                        上海市浦东新区临港大道×××号
-                        <span class="fr sjxx-time">2019/02/06<span>张宇</span></span>
-                    </div>
-                </li>
-                <li class="sjxx-li">
-                    <div class="sjxx-li-line1">
-                        <span class="sjxx-id">004</span>
-                        <span class="sjxx-event">无线门磁出现故障</span>
-                        <span class="fr sjxx-state colororangin">处理中</span>
-                    </div>
-                    <div class="sjxx-address">
-                        上海市浦东新区临港大道×××号
-                        <span class="fr sjxx-time">2019/02/06<span>张宇</span></span>
-                    </div>
-                </li>
-                <li class="sjxx-li">
-                    <div class="sjxx-li-line1">
-                        <span class="sjxx-id">004</span>
-                        <span class="sjxx-event">无线门磁出现故障</span>
-                        <span class="fr sjxx-state colororangin">处理中</span>
-                    </div>
-                    <div class="sjxx-address">
-                        上海市浦东新区临港大道×××号
-                        <span class="fr sjxx-time">2019/02/06<span>张宇</span></span>
-                    </div>
-                </li>
-                <li class="sjxx-li">
-                    <div class="sjxx-li-line1">
-                        <span class="sjxx-id">004</span>
-                        <span class="sjxx-event">无线门磁出现故障</span>
-                        <span class="fr sjxx-state colororangin">处理中</span>
-                    </div>
-                    <div class="sjxx-address">
-                        上海市浦东新区临港大道×××号
-                        <span class="fr sjxx-time">2019/02/06<span>张宇</span></span>
-                    </div>
-                </li>
-                <li class="sjxx-li">
-                    <div class="sjxx-li-line1">
-                        <span class="sjxx-id">004</span>
-                        <span class="sjxx-event">无线门磁出现故障</span>
-                        <span class="fr sjxx-state colororangin">处理中</span>
-                    </div>
-                    <div class="sjxx-address">
-                        上海市浦东新区临港大道×××号
-                        <span class="fr sjxx-time">2019/02/06<span>张宇</span></span>
-                    </div>
-                </li>
+                </li>-->
             </ul>
         </div>
     </div>
