花瓣图数据接入

--- a/Lingang.City.Brain/View/Industry/Garden/TopCompanyInfo.html
+++ b/Lingang.City.Brain/View/Industry/Garden/TopCompanyInfo.html
@@ -8,7 +8,7 @@
                 <div class="cy-qy-title">产业政策</div>
                 <div class="cy-qy-divcont divcont-setright cy-qy-zc-divcont" style="top: .4rem;">
                     <div class="cy-qy-divcont-child">
-                        <ul class="cy-qy-zclist">
+                        <ul class="cy-qy-zclist" id="ul-PolicyIndustry">
                             <li class="cy-qy-zcli active">临港地区产业转型升级发展专项资金管理办法</li>
                             <li class="cy-qy-zcli">临港地区战略性新兴产业专项资金管理办法</li>
                             <li class="cy-qy-zcli">上海市产业转型升级发展专项资金管理办法</li>
@@ -22,7 +22,7 @@
                 <div class="cy-qy-title">人才政策</div>
                 <div class="cy-qy-divcont divcont-setright cy-qy-zc-divcont">
                     <div class="cy-qy-divcont-child">
-                        <ul class="cy-qy-zclist">
+                        <ul class="cy-qy-zclist" id="ul-personnel">
                             <li class="cy-qy-zcli active">上海市临港地区领军型人才直接贡献奖励实施细则</li>
                             <li class="cy-qy-zcli">上海市人才发展资金管理办法</li>
                             <li class="cy-qy-zcli">浦东新区科技发展基金博士后资助资金操作细则</li>
@@ -36,7 +36,7 @@
                 <div class="cy-qy-title">财政税收政策</div>
                 <div class="cy-qy-divcont divcont-setright cy-qy-zc-divcont">
                     <div class="cy-qy-divcont-child">
-                        <ul class="cy-qy-zclist">
+                        <ul class="cy-qy-zclist" id="ul-tax">
                             <li class="cy-qy-zcli active">"十三五"期间浦东新区财政扶持经济发展的意见</li>
                             <li class="cy-qy-zcli">浦东新区"十三五"期间促进战略性新兴产业发展财政扶持办法</li>
                             <li class="cy-qy-zcli">浦东新区"十三五"期间促进航运业发展财政扶持办法</li>
@@ -50,7 +50,7 @@
                 <div class="cy-qy-title">金融政策</div>
                 <div class="cy-qy-divcont divcont-setright cy-qy-zc-divcont">
                     <div class="cy-qy-divcont-child">
-                        <ul class="cy-qy-zclist">
+                        <ul class="cy-qy-zclist" id="ul-finance">
                             <li class="cy-qy-zcli active">科技型中小企业创业投资引导基金管理暂行办法</li>
                             <li class="cy-qy-zcli">上海市商业性融资担保机构担保代偿损失风险补偿办法</li>
                             <li class="cy-qy-zcli">浦东新区关于促进中小企业上市挂牌的若干意见</li>
@@ -64,7 +64,7 @@
                 <div class="cy-qy-title">其他</div>
                 <div class="cy-qy-divcont divcont-setright cy-qy-zc-divcont" style="top: 2.5rem;">
                     <div class="cy-qy-divcont-child">
-                        <ul class="cy-qy-zclist">
+                        <ul class="cy-qy-zclist" id="ul-other">
                             <li class="cy-qy-zcli active">上海市（临港）科技小巨人专项项目</li>
                             <li class="cy-qy-zcli">临港地区节能减排专项资金管理办法</li>
                             <li class="cy-qy-zcli">上海市社会诚信体系建设专项资金管理办法</li>
