景区中间无人机

--- a/Lingang.City.Brain/View/TourNew/Left_Second_01.html
+++ b/Lingang.City.Brain/View/TourNew/Left_Second_01.html
@@ -8,6 +8,7 @@
             <button type="button" class="arrowbtn btnleft"></button>
             <button type="button" class="arrowbtn btnright"></button>
         </div>
+        <button class="chartzoomin" onclick="require('t_Home').loadBigChart('Left_First_wrj')" style="left:5rem;top:.7rem"></button>
         <div class="wrj-right chartdiv" style="width: 46%; height:2.7rem;">
             <div class="wrj-chart" id="wrj-chart"></div>
             <button class="chartzoomin" onclick="require('t_Home').loadBigChart('Left_Second_01')" style="top:-.2rem;"></button>
