--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventCamera.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventCamera.html
@@ -24,7 +24,7 @@
                 <div class="sxt-circleinfo">
                     <div class=""><span>人员:</span><em class="testAerial">468</em></div>
                     <div class=""><span>正常：</span><em class="testAerial">458</em></div>
-                    <div class=""><span>嫌疑人员：</span><em class="testAerial">10</em></div>
+                    <div class=""><span>可疑人员：</span><em class="testAerial">10</em></div>
                 </div>
             </li>
         </ul>
