- fix opening default layer in tour function.

--- a/Lingang.City.Brain/View/TourNew/Bottom_Menu.html
+++ b/Lingang.City.Brain/View/TourNew/Bottom_Menu.html
@@ -4,7 +4,7 @@
     <button type="button" class="night-scene active" onclick="require(['common'], function (data) { data.ChangeLight(0); })">夜景</button>
 </div>-->
 <ul class="flex">
-    <li class="">人流热力图</li>
+    <li class="active">人流热力图</li>
     <!--<li class="">实时路况</li>-->
     <li class="">摄像头</li>
     <li class="">无人机</li>
