--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
@@ -7,8 +7,8 @@
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
                     <div class=""><span>总数：</span><em class="testAerial">468</em></div>
-                    <div class=""><span>正常：</span><em class="testAerial">450</em></div>
-                    <div class=""><span>故障：</span><em class="testAerial">9</em></div>
+                    <div class=""><span>在线：</span><em class="testAerial">450</em></div>
+                    <div class=""><span>离线：</span><em class="testAerial">9</em></div>
                 </div>
             </li>
             <li class="sxt-li sxt-li5" id="iot-sxt2">
