modify the society function

--- a/Lingang.City.Brain/View/SocietyNew/Bottom_IOTDetail.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_IOTDetail.html
@@ -1,7 +1,7 @@
 ﻿<div class="poiinfo" id="div_iotdetail" style="z-index:999; position:absolute; left:55%; top:20%; ">
     <div class="box-top">
         <span id="iothead">事件005</span>
-        <button type="button" class="box-close" onclick="require('s_Home').closeDetail();"></button>
+        <button type="button" class="box-close" onclick="require('s_Home').closeIOTDetail();"></button>
     </div>
     <div class="boxcont clearfix" id="iotdetail">
         <dic class="box-rightinfo fl" style="margin-top:.2rem; font-size:.35rem; line-height:.7rem;">
