--- a/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
+++ b/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
@@ -78,7 +78,7 @@
 <!--大客流视频播放内容-->
 <div id="detail_tourplayer" style="display:none;"></div>
 @*弹出框，规避中js alert事件大屏捕捉不到*@
-<div id="alert-dialog">
+<div id="alert-dialog" style="display:none;">
     <span style="height: 2rem; right: 0px; bottom: 0px; line-height: 2rem; font-size: 1rem; position: absolute;"  onclick="require('t_Home').closeAlertWindow();">确定</span>
     <p></p>
 </div>
