--- a/Lingang.City.Brain/View/SocietyNew/Left_First_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_First_02.html
@@ -6,25 +6,25 @@
             <li class="sxt-li sxt-li4" id="sqzz-sxt1">
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
-                    <div class=""><span>总数：</span><em class="testAerial">739</em></div>
-                    <div class=""><span>在线：</span><em class="testAerial">739</em></div>
-                    <div class=""><span>离线：</span><em class="testAerial">0</em></div>
+                    <div class=""><span>总数：</span><em class="testAerial" id="total_camera">0</em></div>
+                    <div class=""><span>在线：</span><em class="testAerial"  id="online_camera">0</em></div>
+                    <div class=""><span>离线：</span><em class="testAerial" id="outline_camera">0</em></div>
                 </div>
             </li>
             <li class="sxt-li sxt-li5" id="sqzz-sxt2">
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
-                    <div class=""><span>车辆：</span><em class="testAerial">2137</em></div>
-                    <div class=""><span>正常：</span><em class="testAerial">2137</em></div>
-                    <div class=""><span>违规：</span><em class="testAerial">0</em></div>
+                    <div class=""><span>车辆：</span><em class="testAerial" id="total_car">0</em></div>
+                    <div class=""><span>正常：</span><em class="testAerial" id="total_normalCar">0</em></div>
+                    <div class=""><span>违规：</span><em class="testAerial" id="total_illegalCar">0</em></div>
                 </div>
             </li>
             <li class="sxt-li sxt-li6" id="sqzz-sxt3">
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
-                    <div class=""><span>人员：</span><em class="testAerial">2773</em></div>
-                    <div class=""><span>正常：</span><em class="testAerial">2773</em></div>
-                    <div class=""><span>可疑人员：</span><em class="testAerial">0</em></div>
+                    <div class=""><span>人员：</span><em class="testAerial" id="total_person">0</em></div>
+                    <div class=""><span>正常：</span><em class="testAerial" id="normal_person">0</em></div>
+                    <div class=""><span>可疑人员：</span><em class="testAerial" id="doubtable_person">0</em></div>
                 </div>
             </li>
         </ul>
