alert删除，社区人口访客人数修改

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT1.html
@@ -17,7 +17,7 @@
             </li>
             <li class="sqrk-li">
                 <div class="item-l"><img src="Content/images/sqrk_icon3.png"></div>
-                <div class="item-r"><div class="item-r-name">当天进出人数</div><div class="item-r-data testAerial">5,528</div></div>
+                <div class="item-r"><div class="item-r-name">进出人数</div><div class="item-r-data testAerial">5,528</div></div>
             </li>
         </ul>
     </div>
