头部右侧天气隐藏

--- a/Lingang.City.Brain/Views/BigScreen/Index.cshtml
+++ b/Lingang.City.Brain/Views/BigScreen/Index.cshtml
@@ -31,7 +31,7 @@
         <button type="button" class="real-scene" >实景</button>
         <button type="button" class="night-scene active" >夜景</button>
     </span>
-    <span class="header-temp" id="header_tempimg"><img src="Content/images/weathy_04.png"><span id="header_temp">10°</span></span>
+    @*<span class="header-temp" id="header_tempimg"><img src="Content/images/weathy_04.png"><span id="header_temp">10°</span></span>*@
     <span class="header-date" id="pj-year">2019.01.30</span>
     <span id="pj-houre">10:58:49</span>
     <button type="button" class="header-cancel"></button>
